# open-model-fusion

./: .gitignore  ABLATION.md  ARCHITECTURE.md  BEGINNER_GUIDE.md  DESIGN.html  EVAL.md  INSTALL.md  README.md  REVIEW.md  REVIEW_DEEP.md  SKILL.md  USAGE.md  benchmark_logic_hard_judge-glm-5.2_20260630_014242.md  benchmark_orchestrator.py  pyproject.toml  run_capability_test.py  run_glm_vs_fusion.py  run_strong_judge_benchmark.py  run_v13_verifier_test.py  sample_eval_report.md  test_quota_handling.py
config/: presets.yaml
docs/: TODO-multimodal-vision-fusion.md  agg-vs-pickbest-analysis.md  fusion-optimization.md  moa-comparison.md  multi-judge-voting-design.md  release-notes-v1.1.0.md  roadmap-v1.2.md  roadmap-v1.3.md
references/: fusion-mechanism.md
src/open_fusion/: __init__.py  _logging.py  cli.py  client.py  config.py  cost.py  judge.py  multi_judge.py  orchestrator.py  panel.py  prompts.py  schema.py  synthesizer.py  tools.py  verifier.py
src/open_fusion/eval/: __init__.py  ablation.py  cli.py  demo.py  grader.py  harness.py  longhorizon.py  report.py  rubric.py  superiority.py
src/open_fusion/eval/tasks/: __init__.py  _build_tasks.py  draco_tasks.json  fusion_capability_tasks.json  logic_hard_tasks.json  longhorizon_tasks.json  math_hard_v13.json  sample_tasks.json  semiconductor_dram_tasks.json  superiority_tasks.json  superiority_tasks_v2.json
tests/: fake_client.py  test_ablation.py  test_eval.py  test_eval_suites.py  test_moa_integration.py  test_multi_judge_vote.py  test_open_fusion.py  test_verifier.py
